@@ -23,14 +23,14 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <project.previousVersion>3.10.0</project.previousVersion>
+    <project.previousVersion>3.10.4</project.previousVersion>
 
     <camunda.engine.version>7.18.0</camunda.engine.version>
-    <camunda.maven.artifacts.version>7.18.0-ee</camunda.maven.artifacts.version>
+    <camunda.maven.artifacts.version>7.18.10-ee</camunda.maven.artifacts.version>
 
     <!-- We use this version to compile but run IT against containers with zeebe.docker.version -->
-    <zeebe.version>8.3.0-alpha4</zeebe.version>
-    <identity.version>8.3.0-alpha4</identity.version>
+    <zeebe.version>8.3.0-alpha6</zeebe.version>
+    <identity.version>8.3.0-alpha6</identity.version>
     <!-- We use this for the Zeebe test container version only -->
     <zeebe.docker.version>${zeebe.version}</zeebe.docker.version>
 
@@ -49,21 +49,23 @@
     <previous.optimize.elasticsearch.version>7.10.0</previous.optimize.elasticsearch.version>
     <!-- https://www.elastic.co/guide/en/elasticsearch/client/java-api/6.5/_using_another_logger.html -->
     <elasticsearch.log4j.version>2.20.0</elasticsearch.log4j.version>
-    <guava.version>32.1.1-jre</guava.version>
-    <spring.boot.version>2.7.12</spring.boot.version>
-    <spring.version>5.3.27</spring.version>
-    <mockito.version>5.2.0</mockito.version>
+    <guava.version>32.1.2-jre</guava.version>
+    <spring.boot.version>3.0.10</spring.boot.version>
+    <spring.version>6.0.11</spring.version>
+    <mockito.version>5.4.0</mockito.version>
+    <mockito-inline.version>5.2.0</mockito-inline.version>
     <httpclient.version>4.5.14</httpclient.version>
-    <junit.jupiter.version>5.10.0</junit.jupiter.version>
-    <junit.platform.version>1.10.0</junit.platform.version>
-    <mockserver.version>5.14.0</mockserver.version>
+    <junit.jupiter.version>5.9.3</junit.jupiter.version>
+    <junit.platform.version>1.9.3</junit.platform.version>
+    <mockserver.version>5.15.0</mockserver.version>
     <quartz.version>2.3.2</quartz.version>
     <assertj.version>3.24.2</assertj.version>
     <postgres.version>42.6.0</postgres.version>
+    <jakarta.rs-api.version>3.1.0</jakarta.rs-api.version>
 
     <lombok.version>1.18.28</lombok.version>
-    <logback.version>1.2.11</logback.version>
-    <slf4j.version>1.7.36</slf4j.version>
+    <logback.version>1.4.11</logback.version>
+    <slf4j.version>2.0.7</slf4j.version>
 
     <version.node>v16.16.0</version.node>
     <version.yarn>v1.22.18</version.yarn>
@@ -80,6 +82,9 @@
       ${project.build.directory}/surefire-reports/,${project.build.directory}/failsafe-reports/,${project.build.directory}/failsafe-reports/1/,${project.build.directory}/failsafe-reports/2/,${project.build.directory}/failsafe-reports/3/,${project.build.directory}/failsafe-reports/4/
     </sonar.junit.reportPaths>
     <h2.version>2.2.220</h2.version>
+
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
   </properties>
 
   <dependencyManagement>
@@ -192,6 +197,13 @@
     </profile>
 
     <profile>
+      <id>ccsm-it</id>
+      <properties>
+        <skip.unit.tests>true</skip.unit.tests>
+      </properties>
+    </profile>
+
+    <profile>
       <id>coverage</id>
       <build>
         <plugins>
@@ -290,7 +302,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
-      <version>${mockito.version}</version>
+      <version>${mockito-inline.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -315,6 +327,12 @@
       <groupId>io.github.netmikey.logunit</groupId>
       <artifactId>logunit-logback</artifactId>
       <version>1.1.3</version>
+      <exclusions>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+      </exclusions>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -338,7 +356,7 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-codec-http</artifactId>
-      <version>4.1.93.Final</version>
+      <version>4.1.97.Final</version>
     </dependency>
   </dependencies>
 
@@ -373,7 +391,7 @@
             <skipTests>${skip.unit.tests}</skipTests>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <useModulePath>false</useModulePath>
-            <argLine>--illegal-access=permit</argLine>
+            <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
           </configuration>
           <dependencies>
             <dependency>
@@ -390,7 +408,6 @@
           <configuration>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <useModulePath>false</useModulePath>
-            <argLine>--illegal-access=permit -Xms256m -Xmx1024m</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -424,7 +441,7 @@
         <plugin>
           <groupId>org.codehaus.cargo</groupId>
           <artifactId>cargo-maven2-plugin</artifactId>
-          <version>1.8.5</version>
+          <version>1.9.0</version>
         </plugin>
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
@@ -536,7 +553,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <release>11</release>
+          <release>17</release>
         </configuration>
       </plugin>
     </plugins>
